# product-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  openapi.json  pyproject.toml  requirements.txt
product_api/: main.py  playground.py
product_api/data/: products.py
product_api/models/: product.py
product_api/routers/: helloworld.py  products.py
tests/: test_crud.py
